testdata/scenarios/01_7-matchers/k8s/api-example-com-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-example-com
  namespace: kgateway-system
  labels:
    app: apis
spec:
  parentRefs:
    - name: gw
      namespace: kgateway-system
  hostnames:
    - "api.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /search
      queryParams:
      - name: format
        type: Exact
        value: json
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          # Strip /search prefix before forwarding, e.g. /search → /
          replacePrefixMatch: /
    backendRefs:
    - name: httpbin
      namespace: httpbin
      port: 8000
